[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pomodoro-ai-mcp"
version = "0.1.0"
description = "Manage Pomodoro focus sessions with configurable work and break intervals and session counters."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
pomodoro_ai_mcp = "pomodoro_ai_mcp.server:main"
